--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,19 @@
 {
+  "version": 2,
+  "builds": [
+    {
+      "src": "*.html",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "*.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "*.css",
+      "use": "@vercel/static"
+    }
+  ],
   "routes": [
     { "src": "/", "dest": "/index.html" },
     { "src": "/creation", "dest": "/creation.html" },
